refactor(domain/system): Carkey를 키로 사용하여 저장관리 하도록 수정 및 TreeMap을 구현채로 사용하여 정렬된 상태로 관리